# tweezer

./: .env  .env.example  Cargo.toml  LICENSE.md  README.md  publish.sh
tweezer/: Cargo.toml
tweezer-console/: Cargo.toml
tweezer-console/src/: lib.rs  main.rs
tweezer-example-bot/: Cargo.toml
tweezer-example-bot/src/: db.rs  main.rs  web.rs
tweezer-example-bot/src/commands/: ffxiv.rs  games.rs  genshin.rs  metar.rs  mod.rs  pokemon.rs  poll_commands.rs  polls.rs  quotes.rs  reminders.rs  translate.rs
tweezer-example-bot/src/variables/: builtins.rs  count.rs  dynamic.rs  mod.rs  quotes.rs  store.rs
tweezer-macros/: Cargo.toml
tweezer-macros/src/: lib.rs
tweezer-streamplace/: Cargo.toml  STREAMPLACE_CHAT_ARCH.md
tweezer-streamplace/src/: adapter.rs  lib.rs  xrpc.rs
tweezer/src/: adapter.rs  args.rs  bot.rs  context.rs  error.rs  event.rs  lib.rs  message.rs  test_util.rs  trigger.rs  typemap.rs  user.rs
tweezer/tests/: macro_test.rs
