[package]
name = "tweezer-example-bot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "tweezer-example-bot"
path = "src/main.rs"

[dependencies]
async-trait = "0.1"
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tweezer = { path = "../tweezer" }
tweezer-streamplace = { path = "../tweezer-streamplace" }

[dev-dependencies]
tempfile = "3"
