[package]
name = "tweezer-streamplace"
version = "0.0.1-alpha.0"
edition = "2024"
description = "Streamplace adapter for the tweezer bot framework"
license = "MIT"
repository = "https://github.com/espeon/tweezer"
readme = "../README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
mini-moka = "0.10"
reqwest = { version = "0.12", features = ["json"] }
rocketman = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tweezer = { path = "../tweezer" }

[dev-dependencies]
regex-lite = "0.1"
