[package]
name = "tweezer-streamplace"
version = "0.0.1-alpha.0"
edition = "2024"
description = "Streamplace adapter for the tweezer bot framework"
license = "MIT"
repository = "https://github.com/espeon/tweezer"
readme = "../README.md"

[dependencies]
anyhow = "1"
async-trait = "0.1"
jacquard-common = { version = "0.11", features = ["websocket", "zstd"] }
mini-moka = "0.10"
n0-future = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tweezer = { path = "../tweezer", version = "0.0.1-alpha.0" }

[dev-dependencies]
regex-lite = "0.1"
