[package]
name = "tweezer"
version = "0.1.0"
edition = "2024"
description = "A pluggable bot framework for live streaming platforms"
license = "MIT"
repository = "https://github.com/espeon/tweezer"
readme = "../README.md"

[dependencies]
async-trait = "0.1"
thiserror = "2"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
unicode-segmentation = "1"
